--- a/custom_components/bambu_lab/translations/el.json
+++ b/custom_components/bambu_lab/translations/el.json
@@ -267,6 +267,14 @@
       }
     },
     "sensor": {
+      "tool_module": {
+        "name": "Μονάδα εργαλείου",
+        "state": {
+          "none": "Μη τοποθετημένο",
+          "laser": "Λέιζερ",
+          "cutter": "Κόφτης"
+        }
+      },
       "wifi_signal": {
         "name": "Σήμα Wi-Fi"
       },
@@ -686,6 +694,27 @@
       },
       "humidity": {
         "name": "Υγρότητα"
+      },
+      "left_nozzle_temp": {
+        "name": "Αριστερά θερμοκρασία ακροφυσίου"
+      },
+      "left_target_nozzle_temp": {
+        "name": "Αριστερά θερμοκρασία στόχου ακροφυσίου"
+      },
+      "right_nozzle_temp": {
+        "name": "Θερμοκρασία δεξιά ακροφύσιο"
+      },
+      "right_target_nozzle_temp": {
+        "name": "Δεξιά θερμοκρασία στόχου ακροφυσίου"
+      },
+      "sdcard_status": {
+        "name": "Κατάσταση κάρτας SD",
+        "state": {
+          "missing": "Απών",
+          "normal": "Κανονικός",
+          "abnormal": "Ανώμαλος",
+          "readonly": "Μόνο διαβάστε"
+        }
       }
     },
     "camera": {
