--- a/custom_components/bambu_lab/translations/ko.json
+++ b/custom_components/bambu_lab/translations/ko.json
@@ -267,6 +267,14 @@
       }
     },
     "sensor": {
+      "tool_module": {
+        "name": "도구 모듈",
+        "state": {
+          "none": "장착되지 않음",
+          "laser": "레이저",
+          "cutter": "커터"
+        }
+      },
       "wifi_signal": {
         "name": "Wi-Fi 신호"
       },
@@ -686,6 +694,27 @@
       },
       "humidity": {
         "name": "습기"
+      },
+      "left_nozzle_temp": {
+        "name": "남은 노즐 온도"
+      },
+      "left_target_nozzle_temp": {
+        "name": "남은 노즐 목표 온도"
+      },
+      "right_nozzle_temp": {
+        "name": "오른쪽 노즐 온도"
+      },
+      "right_target_nozzle_temp": {
+        "name": "오른쪽 노즐 목표 온도"
+      },
+      "sdcard_status": {
+        "name": "SD 카드 상태",
+        "state": {
+          "missing": "없어진",
+          "normal": "정상",
+          "abnormal": "이상",
+          "readonly": "만 읽으십시오"
+        }
       }
     },
     "camera": {
