--- a/custom_components/bambu_lab/translations/pl.json
+++ b/custom_components/bambu_lab/translations/pl.json
@@ -179,7 +179,7 @@
   "entity": {
     "binary_sensor": {
       "door_open": {
-        "name": "Drzwi obudowy"
+        "name": "Drzwi komory"
       },
       "timelapse": {
         "name": "Nagrywanie timelapse"
@@ -257,7 +257,7 @@
     },
     "select": {
       "printing_speed": {
-        "name": "Prędkość drukowania",
+        "name": "Prędkość druku",
         "state": {
           "silent": "Cichy",
           "standard": "Standardowy",
@@ -267,6 +267,14 @@
       }
     },
     "sensor": {
+      "tool_module": {
+        "name": "Moduł narzędziowy",
+        "state": {
+          "none": "Nie zamontowany",
+          "laser": "Laser",
+          "cutter": "Nóż"
+        }
+      },
       "wifi_signal": {
         "name": "Sygnał Wi-Fi"
       },
@@ -686,6 +694,27 @@
       },
       "humidity": {
         "name": "Wilgotność"
+      },
+      "left_nozzle_temp": {
+        "name": "Temperatura dyszy lewej"
+      },
+      "left_target_nozzle_temp": {
+        "name": "Temperatura docelowa dyszy lewej"
+      },
+      "right_nozzle_temp": {
+        "name": "Temperatura dyszy prawej"
+      },
+      "right_target_nozzle_temp": {
+        "name": "Temperatura docelowa dyszy prawej"
+      },
+      "sdcard_status": {
+        "name": "Status karty SD",
+        "state": {
+          "missing": "Brak karty",
+          "normal": "Prawidłowy",
+          "abnormal": "Nieprawidłowy",
+          "readonly": "Tylko do odczytu"
+        }
       }
     },
     "camera": {
