--- a/custom_components/bambu_lab/translations/pt-br.json
+++ b/custom_components/bambu_lab/translations/pt-br.json
@@ -267,6 +267,14 @@
       }
     },
     "sensor": {
+      "tool_module": {
+        "name": "Módulo de ferramenta",
+        "state": {
+          "none": "Não montado",
+          "laser": "Laser",
+          "cutter": "Cortador"
+        }
+      },
       "wifi_signal": {
         "name": "Sinal Wi-Fi"
       },
@@ -686,6 +694,27 @@
       },
       "humidity": {
         "name": "Umidade"
+      },
+      "left_nozzle_temp": {
+        "name": "Temperatura do bico esquerdo"
+      },
+      "left_target_nozzle_temp": {
+        "name": "Temperatura alvo do bico esquerdo"
+      },
+      "right_nozzle_temp": {
+        "name": "Temperatura do bico direito"
+      },
+      "right_target_nozzle_temp": {
+        "name": "Temperatura alvo do bico direito"
+      },
+      "sdcard_status": {
+        "name": "Status do cartão SD",
+        "state": {
+          "missing": "Ausente",
+          "normal": "Normal",
+          "abnormal": "Anormal",
+          "readonly": "Somente leitura"
+        }
       }
     },
     "camera": {
