--- a/custom_components/bambu_lab/translations/zh-Hans.json
+++ b/custom_components/bambu_lab/translations/zh-Hans.json
@@ -267,6 +267,14 @@
       }
     },
     "sensor": {
+      "tool_module": {
+        "name": "工具模块",
+        "state": {
+          "none": "未安装",
+          "laser": "激光器",
+          "cutter": "切割器"
+        }
+      },
       "wifi_signal": {
         "name": "Wi-Fi 信号"
       },
@@ -686,6 +694,27 @@
       },
       "humidity": {
         "name": "湿度"
+      },
+      "left_nozzle_temp": {
+        "name": "左喷嘴温度"
+      },
+      "left_target_nozzle_temp": {
+        "name": "左喷嘴目标温度"
+      },
+      "right_nozzle_temp": {
+        "name": "右喷嘴温度"
+      },
+      "right_target_nozzle_temp": {
+        "name": "右喷嘴目标温度"
+      },
+      "sdcard_status": {
+        "name": "SD卡状态",
+        "state": {
+          "missing": "丢失的",
+          "normal": "普通的",
+          "abnormal": "异常",
+          "readonly": "只读"
+        }
       }
     },
     "camera": {
