--- a/custom_components/bambu_lab/translations/el.json
+++ b/custom_components/bambu_lab/translations/el.json
@@ -82,7 +82,8 @@
           "serial": "Σειριακός Αριθμός:",
           "host": "Τοπική Διεύθυνση IP του Εκτυπωτή:",
           "access_code": "Κωδικός Πρόσβασης:",
-          "usage_hours": "Ώρες Χρήσης (προαιρετικά):"
+          "usage_hours": "Ώρες Χρήσης (προαιρετικά):",
+          "developer_lan_mode": "Ενεργοποιημένη η λειτουργία Developer LAN:"
         },
         "sections": {
           "advanced": {
@@ -161,7 +162,8 @@
         "data": {
           "host": "Τοπική Διεύθυνση IP του Εκτυπωτή:",
           "access_code": "Κωδικός Πρόσβασης:",
-          "usage_hours": "Ώρες Χρήσης (προαιρετικά):"
+          "usage_hours": "Ώρες Χρήσης (προαιρετικά):",
+          "developer_lan_mode": "Ενεργοποιημένη η λειτουργία Developer LAN:"
         },
         "sections": {
           "advanced": {
@@ -198,6 +200,15 @@
       },
       "extruder_filament_state": {
         "name": "Κράτος νήματος εξωθητήρα"
+      },
+      "developer_lan_mode": {
+        "name": "Λειτουργία προγραμματιστή LAN"
+      },
+      "mqtt_encryption": {
+        "name": "Firmware κρυπτογράφησης MQTT"
+      },
+      "active_ams": {
+        "name": "Ενεργός"
       }
     },
     "button": {
@@ -397,7 +408,8 @@
           "textured_plate": "Υφή βάσης",
           "cool_plate": "Cool Plate / Base PLA",
           "hot_plate": "Smooth PEI / High Temperature Plate",
-          "eng_plate": "Engineering Plate"
+          "eng_plate": "Engineering Plate",
+          "supertack_plate": "Δροσερή πλάκα supertack"
         }
       },
       "print_length": {
@@ -437,9 +449,6 @@
       },
       "active_tray": {
         "name": "Τρέχον Νήμα"
-      },
-      "active_tray_index": {
-        "name": "Ενεργή θέση AMS"
       },
       "nozzle_diameter": {
         "name": "Μέγεθος ακροφυσίου"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "Χειροκίνητη λειτουργία ανανέωσης"
-      },
       "camera": {
         "name": "Ενεργοποίηση κάμερας"
       },
