--- a/custom_components/bambu_lab/translations/es.json
+++ b/custom_components/bambu_lab/translations/es.json
@@ -82,7 +82,8 @@
           "serial": "Número de Serie:",
           "host": "Dirección de IP Local de la Impresora:",
           "access_code": "Código de Acceso:",
-          "usage_hours": "Cantidad de horas de uso (opcional):"
+          "usage_hours": "Cantidad de horas de uso (opcional):",
+          "developer_lan_mode": "Modo LAN de desarrollador habilitado:"
         },
         "sections": {
           "advanced": {
@@ -161,7 +162,8 @@
         "data": {
           "host": "Dirección de IP Local de la Impresora:",
           "access_code": "Código de Acceso:",
-          "usage_hours": "Cantidad de horas de uso (opcional):"
+          "usage_hours": "Cantidad de horas de uso (opcional):",
+          "developer_lan_mode": "Modo LAN de desarrollador habilitado:"
         },
         "sections": {
           "advanced": {
@@ -198,6 +200,15 @@
       },
       "extruder_filament_state": {
         "name": "Estado del filamento extrusor"
+      },
+      "developer_lan_mode": {
+        "name": "Modo LAN de desarrollador"
+      },
+      "mqtt_encryption": {
+        "name": "Firmware de cifrado MQTT"
+      },
+      "active_ams": {
+        "name": "Activo"
       }
     },
     "button": {
@@ -397,7 +408,8 @@
           "textured_plate": "Placa Texturizada",
           "cool_plate": "Placa Fría / Placa PLA",
           "hot_plate": "Placa PEI Lisa / Placa de Alta Temperatura",
-          "eng_plate": "Placa de Ingeniería"
+          "eng_plate": "Placa de Ingeniería",
+          "supertack_plate": "Supertack de placa fría"
         }
       },
       "print_length": {
@@ -437,9 +449,6 @@
       },
       "active_tray": {
         "name": "Bandeja activa"
-      },
-      "active_tray_index": {
-        "name": "Índice de bandeja activa"
       },
       "nozzle_diameter": {
         "name": "Tamaño de boquilla"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "Modo de actualización manual"
-      },
       "camera": {
         "name": "Habilitar cámara"
       },
