--- a/custom_components/bambu_lab/translations/ca.json
+++ b/custom_components/bambu_lab/translations/ca.json
@@ -82,7 +82,8 @@
           "serial": "Número de Serie:",
           "host": "Adreça IP Local de la Impressora:",
           "access_code": "Codi d'accés:",
-          "usage_hours": "Quantitat d'hores d'ús (opcional):"
+          "usage_hours": "Quantitat d'hores d'ús (opcional):",
+          "developer_lan_mode": "Mode LAN desenvolupador activat:"
         },
         "sections": {
           "advanced": {
@@ -161,7 +162,8 @@
         "data": {
           "host": "Adreça IP Local de la Impressora:",
           "access_code": "Codi d'accés:",
-          "usage_hours": "Quantitat d'hores d'ús (opcional):"
+          "usage_hours": "Quantitat d'hores d'ús (opcional):",
+          "developer_lan_mode": "Mode LAN desenvolupador activat:"
         },
         "sections": {
           "advanced": {
@@ -198,6 +200,15 @@
       },
       "extruder_filament_state": {
         "name": "Estat de filament d'extrús"
+      },
+      "developer_lan_mode": {
+        "name": "Mode LAN desenvolupador"
+      },
+      "mqtt_encryption": {
+        "name": "Firmware de xifrat MQTT"
+      },
+      "active_ams": {
+        "name": "Activa"
       }
     },
     "button": {
@@ -397,7 +408,8 @@
           "textured_plate": "Placa Texturitzada",
           "cool_plate": "Placa Freda / Placa PLA",
           "hot_plate": "Placa PEI llisa / Placa d'alta temperatura",
-          "eng_plate": "Placa d'Enginyeria"
+          "eng_plate": "Placa d'Enginyeria",
+          "supertack_plate": "Cool Plate Supertack"
         }
       },
       "print_length": {
@@ -437,9 +449,6 @@
       },
       "active_tray": {
         "name": "Safata activa"
-      },
-      "active_tray_index": {
-        "name": "Índex de safata activa"
       },
       "nozzle_diameter": {
         "name": "Grandària del broquet"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "Mode d'actualització manual"
-      },
       "camera": {
         "name": "Habilitar càmera"
       },
