--- a/custom_components/bambu_lab/translations/en.json
+++ b/custom_components/bambu_lab/translations/en.json
@@ -82,6 +82,7 @@
           "serial": "Serial Number:",
           "host": "Local Printer IP Address:",
           "access_code": "Access Code:",
+          "developer_lan_mode": "Developer Lan Mode Enabled:",
           "usage_hours": "Current usage hours (optional):"
         },
         "sections": {
@@ -161,6 +162,7 @@
         "data": {
           "host": "Local Printer IP Address:",
           "access_code": "Access Code:",
+          "developer_lan_mode": "Developer Lan Mode Enabled:",
           "usage_hours": "Current usage hours (optional):"
         },
         "sections": {
@@ -178,6 +180,12 @@
   },
   "entity": {
     "binary_sensor": {
+      "active_ams": {
+        "name": "Active"
+      },
+      "developer_lan_mode": {
+        "name": "Developer Lan Mode"
+      },
       "door_open": {
         "name": "Enclosure door"
       },
@@ -192,6 +200,9 @@
       },
       "online": {
         "name": "Online"
+      },
+      "mqtt_encryption": {
+        "name": "MQTT encryption firmware"
       },
       "firmware_update": {
         "name": "Firmware update"
@@ -436,7 +447,8 @@
           "textured_plate": "Textured plate",
           "cool_plate": "Cool Plate / PLA Plate",
           "hot_plate": "Smooth PEI Plate / High Temp Plate",
-          "eng_plate": "Engineering Plate"
+          "eng_plate": "Engineering Plate",
+          "supertack_plate": "Cool Plate SuperTack"
         }
       },
       "print_length": {
@@ -476,9 +488,6 @@
       },
       "active_tray": {
         "name": "Active tray"
-      },
-      "active_tray_index": {
-        "name": "Active tray index"
       },
       "nozzle_diameter": {
         "name": "Nozzle size"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "Manual refresh mode"
-      },
       "camera": {
         "name": "Enable camera"
       },
