--- a/custom_components/bambu_lab/translations/it.json
+++ b/custom_components/bambu_lab/translations/it.json
@@ -82,7 +82,8 @@
           "serial": "Numero Seriale",
           "host": "Indirizzo IP della stampante:",
           "access_code": "Codice d'accesso",
-          "usage_hours": "Orari di utilizzo attuali (facoltativo):"
+          "usage_hours": "Orari di utilizzo attuali (facoltativo):",
+          "developer_lan_mode": "Modalità LAN sviluppatore abilitata:"
         },
         "sections": {
           "advanced": {
@@ -161,7 +162,8 @@
         "data": {
           "host": "Indirizzo IP della stampante:",
           "access_code": "Codice d'accesso",
-          "usage_hours": "Orari di utilizzo attuali (facoltativo):"
+          "usage_hours": "Orari di utilizzo attuali (facoltativo):",
+          "developer_lan_mode": "Modalità LAN sviluppatore abilitata:"
         },
         "sections": {
           "advanced": {
@@ -198,6 +200,15 @@
       },
       "extruder_filament_state": {
         "name": "Stato del filamento di estrusore"
+      },
+      "developer_lan_mode": {
+        "name": "Modalità LAN sviluppatore"
+      },
+      "mqtt_encryption": {
+        "name": "Firmware di crittografia MQTT"
+      },
+      "active_ams": {
+        "name": "Attivo"
       }
     },
     "button": {
@@ -397,7 +408,8 @@
           "textured_plate": "Piatto Texutrizzato",
           "cool_plate": "Piatto Freddo/Piatto PLA",
           "hot_plate": "Piatto PEI Liscia/Piatto Alte Temperature",
-          "eng_plate": "Piatto d'Ingegneria"
+          "eng_plate": "Piatto d'Ingegneria",
+          "supertack_plate": "Supertack a piastra fresca"
         }
       },
       "print_length": {
@@ -437,9 +449,6 @@
       },
       "active_tray": {
         "name": "Piatto Attivo"
-      },
-      "active_tray_index": {
-        "name": "Active tray index"
       },
       "nozzle_diameter": {
         "name": "Dimensione Ugello"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "Modalità Aggiornamento Manuale"
-      },
       "camera": {
         "name": "Abilita Fotocamera"
       },
