--- a/custom_components/bambu_lab/translations/ko.json
+++ b/custom_components/bambu_lab/translations/ko.json
@@ -82,7 +82,8 @@
           "serial": "시리얼 번호:",
           "host": "로컬 프린터 IP 주소:",
           "access_code": "접근 코드:",
-          "usage_hours": "현재 사용 시간 (선택 사항):"
+          "usage_hours": "현재 사용 시간 (선택 사항):",
+          "developer_lan_mode": "개발자 LAN 모드 활성화 :"
         },
         "sections": {
           "advanced": {
@@ -161,7 +162,8 @@
         "data": {
           "host": "로컬 프린터 IP 주소:",
           "access_code": "접근 코드:",
-          "usage_hours": "현재 사용 시간 (선택 사항):"
+          "usage_hours": "현재 사용 시간 (선택 사항):",
+          "developer_lan_mode": "개발자 LAN 모드 활성화 :"
         },
         "sections": {
           "advanced": {
@@ -198,6 +200,15 @@
       },
       "extruder_filament_state": {
         "name": "압출기 필라멘트 상태"
+      },
+      "developer_lan_mode": {
+        "name": "개발자 LAN 모드"
+      },
+      "mqtt_encryption": {
+        "name": "MQTT 암호화 펌웨어"
+      },
+      "active_ams": {
+        "name": "활동적인"
       }
     },
     "button": {
@@ -397,7 +408,8 @@
           "textured_plate": "텍스처 플레이트",
           "cool_plate": "쿨 플레이트 / PLA 플레이트",
           "hot_plate": "부드러운 PEI 플레이트 / 고온 플레이트",
-          "eng_plate": "엔지니어링 플레이트"
+          "eng_plate": "엔지니어링 플레이트",
+          "supertack_plate": "멋진 플레이트 슈퍼 택"
         }
       },
       "print_length": {
@@ -437,9 +449,6 @@
       },
       "active_tray": {
         "name": "활성 트레이"
-      },
-      "active_tray_index": {
-        "name": "활성 트레이 인덱스"
       },
       "nozzle_diameter": {
         "name": "노즐 직경"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "수동 새로 고침 모드"
-      },
       "camera": {
         "name": "카메라 활성화"
       },
