--- a/custom_components/bambu_lab/translations/sk.json
+++ b/custom_components/bambu_lab/translations/sk.json
@@ -82,7 +82,8 @@
           "serial": "Sériové čislo:",
           "host": "Lokálna IP adresa tlačiarne:",
           "access_code": "Prístupový kód:",
-          "usage_hours": "Aktuálne hodiny používania (voliteľné):"
+          "usage_hours": "Aktuálne hodiny používania (voliteľné):",
+          "developer_lan_mode": "Povolený režim LAN s vývojárom:"
         },
         "sections": {
           "advanced": {
@@ -161,7 +162,8 @@
         "data": {
           "host": "Lokálna IP adresa tlačiarne:",
           "access_code": "Prístupový kód:",
-          "usage_hours": "Aktuálne hodiny používania (voliteľné):"
+          "usage_hours": "Aktuálne hodiny používania (voliteľné):",
+          "developer_lan_mode": "Povolený režim LAN s vývojárom:"
         },
         "sections": {
           "advanced": {
@@ -198,6 +200,15 @@
       },
       "extruder_filament_state": {
         "name": "Extrudérový vlákno štát"
+      },
+      "developer_lan_mode": {
+        "name": "Vývojár LAN Mode"
+      },
+      "mqtt_encryption": {
+        "name": "Šifrovací firmvér MQTT"
+      },
+      "active_ams": {
+        "name": "Aktívny"
       }
     },
     "button": {
@@ -397,7 +408,8 @@
           "textured_plate": "Textúrovaná podložka",
           "cool_plate": "Cool Plate / PLA Plate",
           "hot_plate": "Smooth PEI Plate / High Temp Plate",
-          "eng_plate": "Engineering Plate"
+          "eng_plate": "Engineering Plate",
+          "supertack_plate": "Cool Plate Supertack"
         }
       },
       "print_length": {
@@ -437,9 +449,6 @@
       },
       "active_tray": {
         "name": "Aktívny zásobník"
-      },
-      "active_tray_index": {
-        "name": "Index aktívneho zásobníka"
       },
       "nozzle_diameter": {
         "name": "Priemer trysky"
@@ -723,9 +732,6 @@
       }
     },
     "switch": {
-      "manual": {
-        "name": "Režim manuálneho obnovenia"
-      },
       "camera": {
         "name": "Povoliť kameru"
       },
