--- a/custom_components/dreame_vacuum/translations/pl.json
+++ b/custom_components/dreame_vacuum/translations/pl.json
@@ -2,16 +2,18 @@
   "config": {
     "abort": {
       "already_configured": "Urządzenie jest już skonfigurowane",
-      "cannot_connect": "Nie udało się połączyć."
+      "cannot_connect": "Nie udało się połączyć.",
+      "reauth_successful": "Ponowna autoryzacja zakończyła się pomyślnies"
     },
     "error": {
       "cannot_connect": "Nie udało się połączyć.",
       "unsupported": "Urządzenie nie jest obsługiwane",
       "wrong_token": "Błąd sumy kontrolnej, zły token",
-      "2fa_required": "Wymagane logowanie 2FA\n{url}",
+      "2fa_failed": "Weryfikacja nie powiodła się.",
+      "wrong_captcha": "Nieprawidłowy captcha.",
       "credentials_incomplete": "Niepoprawne dane logowania, proszę podać nazwę użytkownika, hasło i kraj",
       "login_error": "Nie można się zalogować, sprawdź swoje dane logowania.",
-      "no_devices": "Nie znaleziono obsługiwanych urządzeń na tym koncie w wybranym kraju."
+      "no_devices": "Nie znaleziono obsługiwanych urządzeń na tym koncie w wybranym kraju.{devices}"
     },
     "step": {
       "user": {
@@ -36,6 +38,18 @@
         },
         "description": "Zaloguj się do chmury Xiaomi Miio, zobacz https://www.openhab.org/addons/bindings/miio/#country-servers, aby uzyskać wiecej informacji."
       },
+      "2fa": {
+        "data": {
+          "verification_code": "Kod weryfikacji dwuetapowej"
+        },
+        "description": "## To logowanie wymaga weryfikacji bezpieczeństwa\nProszę otworzyć stronę weryfikacji, aby wysłać kod weryfikacji na telefon komórkowy/e-mail. Po otrzymaniu kodu weryfikacji, nie weryfikuj go na stronie internetowej. Wróć do HomeAssistant i wprowadź go w poniższym polu wejściowym.\n### [Wyślij kod weryfikacji]({url})"
+      },
+      "captcha": {
+        "data": {
+          "code": "Kod"
+        },
+        "description": "## Wymagana jest weryfikacja captcha.\n![captcha](data:image/jpeg;base64,{img})"
+      },
       "dreame": {
         "data": {
           "username": "Nazwa użytkownika",
@@ -44,11 +58,25 @@
         },
         "description": "Zaloguj się do chmury Dreamehome."
       },
+      "mova": {
+        "data": {
+          "username": "Nazwa użytkownika",
+          "password": "Hasło",
+          "country": "Kraj serwera"
+        },
+        "description": "Zaloguj się do chmury Movahome."
+      },
       "devices": {
         "data": {
           "devices": "Obsługiwane urządzenia"
         },
         "description": "Wybierz urządzenie Dreame Vacuum, które chcesz skonfigurować."
+      },
+      "donation": {
+        "data": {
+          "donated": "Eu fiz uma doação"
+        },
+        "description": "## Nie zapomnij wesprzeć projektu.{text}"
       },
       "options": {
         "data": {
@@ -56,7 +84,7 @@
           "color_scheme": "Schemat kolorów mapy",
           "icon_set": "Zestaw ikon mapy",
           "notify": "Powiadomienia",
-          "map_objects": "Mapuj obiekty",
+          "hidden_map_objects": "Ukryte obiekty mapy",
           "low_resolution": "Mapa w niskiej rozdzielczości",
           "square": "Kwadratowa mapa"
         }
@@ -74,11 +102,12 @@
           "color_scheme": "Schemat kolorów mapy",
           "icon_set": "Zestaw ikon mapy",
           "notify": "Powiadomienia",
-          "map_objects": "Mapuj obiekty",
+          "hidden_map_objects": "Ukryte obiekty mapy",
           "low_resolution": "Mapa w niskiej rozdzielczości",
           "square": "Kwadratowa mapa",
           "configuration_type": "Typ konfiguracji",
-          "prefer_cloud": "Preferuj połączenie z chmurą"
+          "prefer_cloud": "Preferuj połączenie z chmurą",
+          "donated": "Eu fiz uma doação"
         }
       }
     },
@@ -132,7 +161,8 @@
           "remove_mop": "Usuń Mopa",
           "adaptation_without_route": "Dostosowanie Bez trasy",
           "vacuum_and_mop": "Odkurz i mopuj",
-          "ignore": "Ignorować"
+          "ignore": "Ignorować",
+          "cross": "Przekraczać"
         }
       },
       "mop_wash_level": {
@@ -164,6 +194,13 @@
           "weekly": "Co tydzień"
         }
       },
+      "mop_extend_frequency": {
+        "state": {
+          "standard": "Standard",
+          "intelligent": "Inteligentny",
+          "high": "Wysoki"
+        }
+      },
       "floor_material": {
         "state": {
           "none": "Nic",
@@ -188,6 +225,11 @@
         "state": {
           "by_area": "Według obszaru",
           "by_time": "Z czasem",
+          "by_room": "Według pokoju"
+        }
+      },
+      "mop_clean_frequency": {
+        "state": {
           "by_room": "Według pokoju"
         }
       },
@@ -216,6 +258,28 @@
           "off": "Wyłączony",
           "routine_cleaning": "Rutynowe czyszczenie",
           "deep_cleaning": "Dogłębne czyszczenie"
+        }
+      },
+      "cleangenius_mode": {
+        "state": {
+          "vacuum_and_mop": "Próżnia i mop",
+          "mop_after_vacuum": "MOP po próżni"
+        }
+      },
+      "washing_mode": {
+        "state": {
+          "light": "Światło",
+          "standard": "Standard",
+          "deep": "Głęboko",
+          "ultra_washing": "Ultra mycie"
+        }
+      },
+      "water_temperature": {
+        "state": {
+          "normal": "Normalna",
+          "mild": "Łagodny",
+          "warm": "Ciepły",
+          "hot": "Gorący"
         }
       },
       "auto_recleaning": {
@@ -349,7 +413,12 @@
           "cruising_point_paused": "Rejs do punktu wstrzymany",
           "summon_clean_paused": "Powiedz wstrzymanie sprzątania",
           "returning_to_install_mop": "Powracanie w celu montażu podkładki mopa",
-          "returning_to_remove_mop": "Powracanie w celu demontażu podkładki mopa"
+          "returning_to_remove_mop": "Powracanie w celu demontażu podkładki mopa",
+          "station_cleaning": "Czyszczenie stacji",
+          "pet_finding": "Znalezienie zwierząt domowych",
+          "auto_cleaning_washing_paused": "Przerwające mycie automatycznego czyszczenia",
+          "area_cleaning_washing_paused": "Przerwające mycie w porze.",
+          "custom_cleaning_washing_paused": "Zatrzymane mycie czyszczenia niestandardowego"
         }
       },
       "water_tank": {
@@ -374,7 +443,9 @@
         "state": {
           "unknown": "Nieznany",
           "not_available": "Niedostępny",
-          "available": "Dostępny"
+          "available": "Dostępny",
+          "over_use": "Nadmierne użycie",
+          "never": "Nigdy"
         }
       },
       "auto_empty_status": {
@@ -418,7 +489,7 @@
           "infrared_shielding": "Błąd ekranowania na podczerwień",
           "charge_no_electric": "Stacja ładująca nie jest włączona",
           "battery_fault": "Błąd baterii",
-          "fan_speed": "Błąd czujnika prędkości wentylatora",
+          "fan_speed_error": "Błąd czujnika prędkości wentylatora",
           "left_wheell_speed": "Lewe koło może być zablokowane",
           "right_wheell_speed": "Prawe koło może być zablokowane",
           "bmi055_acce": "Błąd akcelerometru",
@@ -533,6 +604,52 @@
           "draining_failed": "Opróżnianie nie powiodło się"
         }
       },
+      "clean_water_tank_status": {
+        "state": {
+          "unknown": "Nieznany",
+          "not_available": "Niedostępne",
+          "not_installed": "Nie zainstalowane",
+          "low_water": "Niska woda",
+          "installed": "Zainstalowane"
+        }
+      },
+      "dirty_water_tank_status": {
+        "state": {
+          "unknown": "Nieznany",
+          "installed": "Zainstalowane",
+          "not_installed_or_full": "Nie zainstalowane lub pełne"
+        }
+      },
+      "dust_bag_status": {
+        "state": {
+          "unknown": "Nieznany",
+          "installed": "Zainstalowane",
+          "not_installed": "Nie zainstalowane",
+          "check": "Sprawdzać"
+        }
+      },
+      "detergent_status": {
+        "state": {
+          "unknown": "Nieznany",
+          "installed": "Zainstalowane",
+          "disabled": "Wyłączony",
+          "low_detergent": "Niski detergent"
+        }
+      },
+      "hot_water_status": {
+        "state": {
+          "unknown": "Nieznany",
+          "disabled": "Wyłączony",
+          "enabled": "Włączony"
+        }
+      },
+      "station_drainage_status": {
+        "state": {
+          "unknown": "Nieznany",
+          "idle": "Bezczynny",
+          "draining": "Opróżnianie"
+        }
+      },
       "task_type": {
         "state": {
           "standard": "Standardowe sprzątanie",
@@ -550,7 +667,9 @@
           "summon": "Wezwij sprzątanie",
           "summon_paused": "Czyszczenie przywołania zostało wstrzymane",
           "water_stain": "Czyszczenie plam po wodzie",
-          "water_stain_paused": "Usuwanie plam wodnych zostało wstrzymane"
+          "water_stain_paused": "Usuwanie plam wodnych zostało wstrzymane",
+          "boosted_edge_cleaning": "Zwiększone czyszczenie krawędzi",
+          "hair_compressing": "Kompresowanie włosów"
         }
       }
     }
@@ -643,6 +762,16 @@
         "points": {
           "name": "Zwrotnica",
           "description": "Lista współrzędnych ścieżki."
+        }
+      }
+    },
+    "vacuum_start_shortcut": {
+      "name": "Uruchom skrót",
+      "description": "Uruchamia zadanie skrótu. (Tylko na obsługiwanych urządzeniach)",
+      "fields": {
+        "shortcut_id": {
+          "name": "ID skrótu",
+          "description": "ID skrótu."
         }
       }
     },
@@ -762,7 +891,7 @@
         },
         "file_url": {
           "name": "Adres pliku",
-          "description": "Adres URL zapisanego pliku bz2.gz lub tar.gz"
+          "description": "Adres URL zapisanego pliku tbz2.gz lub tar.gz"
         }
       }
     },
@@ -855,6 +984,28 @@
         "repeats": {
           "name": "Powtarza",
           "description": "Godziny sprzątania każdego pokoju."
+        }
+      }
+    },
+    "vacuum_set_custom_carpet_cleaning": {
+      "name": "Ustaw niestandardowe czyszczenie dywanu",
+      "description": "Ustaw niestandardowe ustawienia czyszczenia dywanów. (Tylko na obsługiwanych urządzeniach)",
+      "fields": {
+        "id": {
+          "name": "ID dywanu",
+          "description": "ID dywanów."
+        },
+        "type": {
+          "name": "Typ obiektu",
+          "description": "Typ obiektu o danym ID. (0 = Automatycznie wykryty dywan, 1 = Ręcznie utworzony dywan, 2 = Dywan pokojowy (jeśli obsługiwany))"
+        },
+        "carpet_cleaning": {
+          "name": "Czyszczenie dywanu",
+          "description": "Niestandardowe ustawienie czyszczenia dla każdego dywanu."
+        },
+        "carpet_settings": {
+          "name": "Ustawienia dywanu",
+          "description": "Niestandardowe ustawienia dywanu dla każdego dywanu z listą włączonych ustawień."
         }
       }
     },
