--- a/custom_components/dreame_vacuum/translations/pt.json
+++ b/custom_components/dreame_vacuum/translations/pt.json
@@ -2,16 +2,18 @@
   "config": {
     "abort": {
       "already_configured": "O dispositivo já está configurado",
-      "cannot_connect": "Falha ao conectar."
+      "cannot_connect": "Falha ao conectar.",
+      "reauth_successful": "A reautenticação foi bem-sucedida"
     },
     "error": {
       "cannot_connect": "Falha ao conectar.",
       "unsupported": "Dispositivo não suportado",
       "wrong_token": "Erro de checksum, token incorreto",
-      "2fa_required": "Login de 2FA necessário\n{url}",
+      "2fa_failed": "Falha na verificação.",
+      "wrong_captcha": "Captcha incorreto.",
       "credentials_incomplete": "Credenciais incompletas, por favor preencha o nome de usuário, senha e país",
       "login_error": "Não foi possível fazer login, verifique as credenciais.",
-      "no_devices": "Nenhum dispositivo compatível encontrado nesta conta no país selecionado."
+      "no_devices": "Nenhum dispositivo compatível encontrado nesta conta no país selecionado.{devices}"
     },
     "step": {
       "user": {
@@ -36,6 +38,18 @@
         },
         "description": "Faça login na Xiaomi Miio Cloud, consulte https://www.openhab.org/addons/bindings/miio/#country-servers para saber qual servidor de nuvem usar."
       },
+      "2fa": {
+        "data": {
+          "verification_code": "Código de verificação em dois passos"
+        },
+        "description": "## Este login requer verificação de segurança\nPor favor, abra a página de verificação para enviar o código de verificação por telemóvel/email. Após receber o código, não o verifique na página web. Volte ao HomeAssistant e insira-o na caixa de entrada abaixo.\n### [Enviar código de verificação]({url})"
+      },
+      "captcha": {
+        "data": {
+          "code": "Código"
+        },
+        "description": "## É necessária a verificação do captcha.\n![captcha](data:image/jpeg;base64,{img})"
+      },
       "dreame": {
         "data": {
           "username": "Usuário",
@@ -44,11 +58,25 @@
         },
         "description": "Acesse a nuvem Dreamehome."
       },
+      "mova": {
+        "data": {
+          "username": "Usuário",
+          "password": "Senha",
+          "country": "País do servidor"
+        },
+        "description": "Acesse a nuvem Movahome."
+      },
       "devices": {
         "data": {
           "devices": "Dispositivos suportados"
         },
         "description": "Por favor, selecione o dispositivo de Aspirador Dreame que você deseja configurar."
+      },
+      "donation": {
+        "data": {
+          "donated": "Eu fiz uma doação"
+        },
+        "description": "## Não se esqueça de apoiar o projeto.{text}"
       },
       "options": {
         "data": {
@@ -56,7 +84,7 @@
           "color_scheme": "Esquema de cores do mapa",
           "icon_set": "Conjunto de ícones do mapa",
           "notify": "Notificação",
-          "map_objects": "Objetos no mapa",
+          "hidden_map_objects": "Objetos de mapa ocultos",
           "low_resolution": "Mapa de baixa resolução",
           "square": "Mapa quadrado"
         }
@@ -74,11 +102,12 @@
           "color_scheme": "Esquema de cores do mapa",
           "icon_set": "Conjunto de ícones do mapa",
           "notify": "Notificação",
-          "map_objects": "Objetos no mapa",
+          "hidden_map_objects": "Objetos de mapa ocultos",
           "low_resolution": "Mapa de baixa resolução",
           "square": "Mapa quadrado",
           "configuration_type": "Tipo de configuração",
-          "prefer_cloud": "Preferir conexão com a nuvem"
+          "prefer_cloud": "Preferir conexão com a nuvem",
+          "donated": "Eu fiz uma doação"
         }
       }
     },
@@ -132,7 +161,8 @@
           "remove_mop": "Remover pano",
           "adaptation_without_route": "Adaptação Sem rota",
           "vacuum_and_mop": "Aspirador e esfregão",
-          "ignore": "Ignorar"
+          "ignore": "Ignorar",
+          "cross": "Atravessar"
         }
       },
       "mop_wash_level": {
@@ -164,6 +194,13 @@
           "weekly": "Semanalmente"
         }
       },
+      "mop_extend_frequency": {
+        "state": {
+          "standard": "Padrão",
+          "intelligent": "Inteligente",
+          "high": "Alto"
+        }
+      },
       "floor_material": {
         "state": {
           "none": "Nenhum",
@@ -188,6 +225,11 @@
         "state": {
           "by_area": "Por área",
           "by_time": "Por tempo",
+          "by_room": "Por quarto"
+        }
+      },
+      "mop_clean_frequency": {
+        "state": {
           "by_room": "Por quarto"
         }
       },
@@ -216,6 +258,28 @@
           "off": "Desligado",
           "routine_cleaning": "Limpeza de rotina",
           "deep_cleaning": "Limpeza profunda"
+        }
+      },
+      "cleangenius_mode": {
+        "state": {
+          "vacuum_and_mop": "Vacuum e MOP",
+          "mop_after_vacuum": "MOP após vácuo"
+        }
+      },
+      "washing_mode": {
+        "state": {
+          "light": "Luz",
+          "standard": "Padrão",
+          "deep": "Profundo",
+          "ultra_washing": "Ultra Lavagem"
+        }
+      },
+      "water_temperature": {
+        "state": {
+          "normal": "Normal",
+          "mild": "Leve",
+          "warm": "Esquentar",
+          "hot": "Quente"
         }
       },
       "auto_recleaning": {
@@ -349,7 +413,12 @@
           "cruising_point_paused": "Cruzeiro até um ponto pausado",
           "summon_clean_paused": "Chamada para limpar pausada",
           "returning_to_install_mop": "Retornando para instalar o pano",
-          "returning_to_remove_mop": "Retornando para remover o pano"
+          "returning_to_remove_mop": "Retornando para remover o pano",
+          "station_cleaning": "Limpeza da estação",
+          "pet_finding": "Pet Econd",
+          "auto_cleaning_washing_paused": "Lavagem de limpeza automática fez uma pausa",
+          "area_cleaning_washing_paused": "Lavagem de área para lavar a lavagem parada",
+          "custom_cleaning_washing_paused": "Lavagem de limpeza personalizada fez uma pausa"
         }
       },
       "water_tank": {
@@ -374,7 +443,9 @@
         "state": {
           "unknown": "Desconhecido",
           "not_available": "Não disponível",
-          "available": "Disponível"
+          "available": "Disponível",
+          "over_use": "Uso excessivo",
+          "never": "Nunca"
         }
       },
       "auto_empty_status": {
@@ -533,6 +604,52 @@
           "draining_failed": "Falha na drenagem"
         }
       },
+      "clean_water_tank_status": {
+        "state": {
+          "unknown": "Desconhecido",
+          "not_available": "Não disponível",
+          "not_installed": "Não instalado",
+          "low_water": "Água baixa",
+          "installed": "Instalado"
+        }
+      },
+      "dirty_water_tank_status": {
+        "state": {
+          "unknown": "Desconhecido",
+          "installed": "Instalado",
+          "not_installed_or_full": "Não instalado ou cheio"
+        }
+      },
+      "dust_bag_status": {
+        "state": {
+          "unknown": "Desconhecido",
+          "installed": "Instalado",
+          "not_installed": "Não instalado",
+          "check": "Verificar"
+        }
+      },
+      "detergent_status": {
+        "state": {
+          "unknown": "Desconhecido",
+          "installed": "Instalado",
+          "disabled": "Desabilitado",
+          "low_detergent": "Detergente baixo"
+        }
+      },
+      "hot_water_status": {
+        "state": {
+          "unknown": "Desconhecido",
+          "disabled": "Desabilitado",
+          "enabled": "Habilitado"
+        }
+      },
+      "station_drainage_status": {
+        "state": {
+          "unknown": "Desconhecido",
+          "idle": "Parado",
+          "draining": "Drenagem"
+        }
+      },
       "task_type": {
         "state": {
           "standard": "Limpeza padrão",
@@ -550,7 +667,9 @@
           "summon": "Limpeza por chamada",
           "summon_paused": "Limpeza por chamada pausada",
           "water_stain": "Limpeza de manchas de água",
-          "water_stain_paused": "Limpeza de manchas de água pausada"
+          "water_stain_paused": "Limpeza de manchas de água pausada",
+          "boosted_edge_cleaning": "Limpeza de borda aumentada",
+          "hair_compressing": "Comprimindo o cabelo"
         }
       }
     }
@@ -643,6 +762,16 @@
         "points": {
           "name": "Pontos",
           "description": "Lista de coordenadas do trajeto."
+        }
+      }
+    },
+    "vacuum_start_shortcut": {
+      "name": "Iniciar atalho",
+      "description": "Inicia uma tarefa de atalho. (Apenas em dispositivos suportados)",
+      "fields": {
+        "shortcut_id": {
+          "name": "ID do atalho",
+          "description": "ID do atalho."
         }
       }
     },
@@ -762,7 +891,7 @@
         },
         "file_url": {
           "name": "URL do arquivo",
-          "description": "URL do arquivo bz2.gz ou tar.gz salvo"
+          "description": "URL do arquivo tbz2.gz ou tar.gz salvo"
         }
       }
     },
@@ -855,6 +984,28 @@
         "repeats": {
           "name": "Repetições",
           "description": "Número de repetições de limpeza para cada divisão."
+        }
+      }
+    },
+    "vacuum_set_custom_carpet_cleaning": {
+      "name": "Definir limpeza personalizada do tapete",
+      "description": "Definir configuração personalizada de limpeza para tapetes. (Apenas em dispositivos suportados)",
+      "fields": {
+        "id": {
+          "name": "ID do tapete",
+          "description": "IDs dos tapetes."
+        },
+        "type": {
+          "name": "Tipo de objeto",
+          "description": "Tipo do objeto com o ID. (0 = Tapete detetado automaticamente, 1 = Tapete criado manualmente, 2 = Tapete da divisão (se suportado))"
+        },
+        "carpet_cleaning": {
+          "name": "Limpeza do tapete",
+          "description": "Configuração personalizada de limpeza para cada tapete."
+        },
+        "carpet_settings": {
+          "name": "Configurações do tapete",
+          "description": "Configuração personalizada para cada tapete com uma lista de configurações ativadas."
         }
       }
     },
